CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(Ifhi C)

# Make MinSizeRel version of build even more compact
IF(${CMAKE_BUILD_TYPE} MATCHES MinSizeRel)
  SET(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} -fomit-frame-pointer")
ENDIF()

# Find all source files
FILE(GLOB_RECURSE IFHI_SOURCES CONFIGURE_DEPENDS "src/*.c")

# Find all directories with headers
FILE(GLOB_RECURSE IFHI_HEADERS CONFIGURE_DEPENDS "src/*.h")
SET(IFHI_INCLUDE_DIRS "")
FOREACH (_headerFile ${IFHI_HEADERS})
  GET_FILENAME_COMPONENT(_dir ${_headerFile} PATH)
  LIST(APPEND IFHI_INCLUDE_DIRS ${_dir})
ENDFOREACH()
LIST(REMOVE_DUPLICATES IFHI_INCLUDE_DIRS)

ADD_EXECUTABLE(Ifhi ${IFHI_SOURCES})
TARGET_INCLUDE_DIRECTORIES(Ifhi PRIVATE ${IFHI_INCLUDE_DIRS})
